--- a/finishlineinfra.yaml
+++ b/finishlineinfra.yaml
@@ -37,6 +37,9 @@ Resources:
         - !Ref InstanceSecurityGroup
       KeyName: !Ref KeyName
       ImageId: !Ref AmiId
+       Tags: 
+          - Key: Name
+            Value: BaninaInstance
   InstanceSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
