--- a/Finishlinelab2/finishlineinfra.yaml
+++ b/Finishlinelab2/finishlineinfra.yaml
@@ -19,7 +19,7 @@ Parameters:
   AmiId:
     Description: Amazon EC2 AMI
     Type: String
-    Default: ami-0080e4c5bc078760e 
+    Default: ami-0080e4c5bc078760e
   SSHLocation:
     Description: The IP address range that can be used to SSH to the EC2 instances
     Type: String
@@ -29,17 +29,17 @@ Parameters:
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
 Resources:
-  BaninaInstance:
+  CokerInstance:
     Type: 'AWS::EC2::Instance'
     Properties:
       InstanceType: !Ref InstanceType
       SecurityGroups:
         - !Ref InstanceSecurityGroup
       KeyName: !Ref KeyName
-      ImageId: !Ref AmiId
-      Tags: 
+      ImageId: !Ref AmiId 
+      Tags:
         - Key: Name
-          Value: BaninaInstance
+          Value: CokerInstance  
   InstanceSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
@@ -52,14 +52,14 @@ Resources:
 Outputs:
   InstanceId:
     Description: InstanceId of the newly created EC2 instance
-    Value: !Ref BaninaInstance
+    Value: !Ref CokerInstance
   AZ:
     Description: Availability Zone of the newly created EC2 instance
     Value: !GetAtt 
-      - BaninaInstance
+      - CokerInstance
       - AvailabilityZone
-  PublicIP:
-    Description: Public IP address of the newly created EC2 instance
+  PublicDNS:
+    Description: Public DNSName of the newly created EC2 instance
     Value: !GetAtt 
-      - BaninaInstance
-      - PublicIp 
+      - CokerInstance
+      - PublicDnsName
