--- a/Finishlinelab2/finishlineinfra.yaml
+++ b/Finishlinelab2/finishlineinfra.yaml
@@ -29,7 +29,7 @@ Parameters:
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
 Resources:
-  CokerInstance:
+  BaninaInstance:
     Type: 'AWS::EC2::Instance'
     Properties:
       InstanceType: !Ref InstanceType
