--- a/Finishlinelab3/Jenkinsfile
+++ b/Finishlinelab3/Jenkinsfile
@@ -1,5 +1,4 @@
-pipeline {
-    agent any
+   agent any
 
     environment {
         AWS_ACCESS_KEY_ID     = credentials('jenkins_aws_key')
@@ -7,7 +6,7 @@ pipeline {
         AWS_DEFAULT_REGION = ('us-east-1')
     }
     stages {
-        stage('AWS_build') {
+        stage('CloudFormation') {
             steps {
                 sh 'aws cloudformation create-stack --template-body file:///var/lib/jenkins/workspace/Finishlinelab2/Finishlinelab2/finishlinelab2infra.yml --stack-name CharityInstance --parameter ParameterKey=KeyName,ParameterValue=finishlinelab ParameterKey=InstanceType,ParameterValue=t2.micro'
             }
@@ -29,4 +28,3 @@ pipeline {
         }
     }
 }
-
