--- a/Finishlinelab3/finishlinelab3infra.yaml
+++ b/Finishlinelab3/finishlinelab3infra.yaml
@@ -63,15 +63,15 @@ Resources:
 Outputs:
   InstanceId:
     Description: InstanceId of the newly created EC2 instance
-    Value: !Ref BaninaInstance
+    Value: !Ref BaninaWebserver
   AZ:
     Description: Availability Zone of the newly created EC2 instance
     Value: !GetAtt 
-      - BaninaInstance
+      - BaninaWebserver
       - AvailabilityZone
   PublicDNS:
     Description: Public DNSName of the newly created EC2 instance
     Value: !GetAtt 
-      - BaninaInstance
+      - BaninaWebserver
       - PublicDnsName
 ## test   
