--- a/Finishlinelab3/finishlinelab3infra.yaml
+++ b/Finishlinelab3/finishlinelab3infra.yaml
@@ -29,7 +29,7 @@ Parameters:
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
 Resources:
-  BaninaWebServer:
+  BaninaWebserver:
     Type: 'AWS::EC2::Instance'
     Properties:
       InstanceType: !Ref InstanceType
@@ -39,39 +39,52 @@ Resources:
       ImageId: !Ref AmiId 
       Tags:
         - Key: Name
-          Value: BaninaWebServer
-  BaninaWebServerSecurityGroup:
-  Type: AWS::EC2::SecurityGroup
-  Properties:
-    GroupDescription: Enable HTTP access via port 80 and SSH access
-    SecurityGroupIngress:
-    - IpProtocol: tcp
-      FromPort: '80'
-      ToPort: '80'
-      CidrIp: 0.0.0.0/0
-    - IpProtocol: tcp
-      FromPort: '22'
-      ToPort: '22'
-      CidrIp: 0.0.0.0/0          
-  BaninaDBSecurityGroup:
-  Type: AWS::RDS::DBSecurityGroup
-  Properties:
-    DBSecurityGroupIngress:
-      EC2SecurityGroupName:
-        Ref: WebServerSecurityGroup
-    GroupDescription: Frontend Access        
+          Value: BaninaWebserver  
+  BaninaWebserverSG:
+    Type: 'AWS::EC2::SecurityGroup'
+    Properties:
+      GroupDescription: Enable HTTP access via port 80 and SSH access
+      SecurityGroupIngress:
+      - IpProtocol: tcp
+        FromPort: '80'
+      	ToPort: '80'
+        CidrIp: 0.0.0.0/0
+      - IpProtocol: tcp	  
+        FromPort: '22'	    
+        ToPort: '22'	     
+        CidrIp: 0.0.0.0/0     
+  BaninaDBServer:
+    Type: 'AWS::EC2::Instance'
+    Properties:
+      InstanceType: !Ref InstanceType
+      SecurityGroups:
+        - !Ref InstanceSecurityGroup
+      KeyName: !Ref KeyName
+      ImageId: !Ref AmiId 
+      Tags:
+        - Key: Name
+          Value: BaninaDBServer   
+
+  BaninaDBServerSG:
+    Type: 'AWS::EC2::SecurityGroup'
+    Properties:
+      GroupDescription: Enable SSH access via port 22
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: '3306'
+          ToPort: '3306'
+          CidrIp: !Ref SSHLocation
 Outputs:
   InstanceId:
     Description: InstanceId of the newly created EC2 instance
-    Value: !Ref BaninaWebserver
+    Value: !Ref BaninaInstance
   AZ:
     Description: Availability Zone of the newly created EC2 instance
     Value: !GetAtt 
-      - BaninaWebserver
+      - BaninaInstance
       - AvailabilityZone
   PublicDNS:
     Description: Public DNSName of the newly created EC2 instance
     Value: !GetAtt 
-      - BaninaWebserver
-      - PublicDnsName
-## test   
+      - BaninaInstance
+      - PublicIp
