--- a/Finishlinelab3/finishlinelab3infra.yaml
+++ b/Finishlinelab3/finishlinelab3infra.yaml
@@ -25,7 +25,7 @@ Parameters:
     Type: String
     MinLength: '9'
     MaxLength: '18'
-    Default: 0.0.0.0/0
+    Default: SSHLocation
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
 Resources:
@@ -48,11 +48,11 @@ Resources:
       - IpProtocol: tcp
         FromPort: '80'
       	ToPort: '80'
-        CidrIp: 0.0.0.0/0
+        CidrIp: SSHLocation
       - IpProtocol: tcp	  
         FromPort: '22'	    
         ToPort: '22'	     
-        CidrIp: 0.0.0.0/0     
+        CidrIp: SSHLocation     
   BaninaDBServer:
     Type: 'AWS::EC2::Instance'
     Properties:
