--- a/Finishlinelab3/finishlinelab3infra.yaml
+++ b/Finishlinelab3/finishlinelab3infra.yaml
@@ -48,7 +48,7 @@ Resources:
       - IpProtocol: tcp	  
         FromPort: '22'	    
         ToPort: '22'	     
-        CidrIp: SSHLocation     
+        CidrIp: !Ref SSHLocation     
   BaninaDBServer:
     Type: 'AWS::EC2::Instance'
     Properties:
