--- a/Finishlinelab3/finishlinelab3infra.yaml
+++ b/Finishlinelab3/finishlinelab3infra.yaml
@@ -45,6 +45,10 @@ Resources:
     Properties:
       GroupDescription: Enable HTTP access via port 80 and SSH access
       SecurityGroupIngress:
+      - IpProtocol: tcp
+        FromPort: '80'
+      	ToPort: '80'
+        CidrIp: !Ref SSHLocation
       - IpProtocol: tcp	  
         FromPort: '22'	    
         ToPort: '22'	     
