--- a/Finishlinelab3/finishlinelab3infra.yaml
+++ b/Finishlinelab3/finishlinelab3infra.yaml
@@ -44,7 +44,11 @@ Resources:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
       GroupDescription: Enable HTTP access via port 80 and SSH access
-      SecurityGroupIngress:   
+      SecurityGroupIngress:
+        - IpProtocol: tcp	  
+          FromPort: '22'	    
+          ToPort: '22'	     
+          CidrIp: !Ref SSHLocation     
   BaninaDBServer:
     Type: 'AWS::EC2::Instance'
     Properties:
