--- a/Finishlinelab3/finishlinelab3infra.yaml
+++ b/Finishlinelab3/finishlinelab3infra.yaml
@@ -25,30 +25,30 @@ Parameters:
     Type: String
     MinLength: '9'
     MaxLength: '18'
-    Default: SSHLocation
+    Default: 0.0.0.0/0
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
 Resources:
-  BaninaWebserver:
+  BaninaWebServer:
     Type: 'AWS::EC2::Instance'
     Properties:
       InstanceType: !Ref InstanceType
       SecurityGroups:
-        - !Ref BaninaWebserverSG
+        - !Ref BaninaWebServerSG
       KeyName: !Ref KeyName
       ImageId: !Ref AmiId 
       Tags:
         - Key: Name
-          Value: BaninaWebserver  
-  BaninaWebserverSG:
+          Value: BaninaWebServer  
+  BaninaWebServerSG:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
-      GroupDescription: Enable HTTP access via port 80 and SSH access
+      GroupDescription: Enable SSH access via port 22
       SecurityGroupIngress:
-        - IpProtocol: tcp	  
-          FromPort: '22'	    
-          ToPort: '22'	     
-          CidrIp: !Ref SSHLocation     
+        - IpProtocol: tcp
+          FromPort: '22'
+          ToPort: '22'
+          CidrIp: !Ref SSHLocation
   BaninaDBServer:
     Type: 'AWS::EC2::Instance'
     Properties:
@@ -83,4 +83,4 @@ Outputs:
     Description: Public DNSName of the newly created EC2 instance
     Value: !GetAtt 
       - BaninaWebServer
-      - PublicIp
+      - PublicDnsName
