--- a/staticWebsite/dockercft.yaml.yml
+++ b/staticWebsite/dockercft.yaml.yml
@@ -28,7 +28,7 @@ Parameters:
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
 Resources:
-  CokerWebServer:
+  BaninaWebServer:
     Type: 'AWS::EC2::Instance'
     Properties:
       InstanceType: !Ref InstanceType
